--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -149,12 +149,19 @@
                                         </div>
                                         <div class="form-group">
                                             <label>Category</label>
-                                            <select class="form-control" name="category" >
+                                            <select class="form-control" name="category">
                                                 <% for (let i = 0; i < category.length; i++) { %>
-                                                <option value="<%= category[i]._id %>"><%= category[i].name %></option>
+                                                    <option value="<%= category[i]._id %>" 
+                                                        <% if ( category[i]._id.toString() === product.categoryId._id.toString() ) { %> 
+                                                            selected 
+                                                        <% } %> 
+                                                    >
+                                                        <%= category[i].name %>
+                                                    </option>
                                                 <% } %>
                                             </select>
                                         </div>
+                                        
                                         <div class="form-group">
                                             <label>Price</label>
                                             <input type="number" id="price" class="form-control" name="price" value="<%=product.price%>">
