--- a/views/users/detailedProduct.ejs
+++ b/views/users/detailedProduct.ejs
@@ -241,7 +241,7 @@
                                         <div class="product-details-quantity">
                                             
                                         </div><!-- End .product-details-quantity -->
-                                        <% if( data.quantity<=0 ){ %>
+                                        <% if( data.quantity<=0 ||data.is_blocked === true ){ %>
                                             <div class="product-details-action summary">
                                                 <h7 class="text-danger ">Out Of Stock</h7>
     
