--- a/views/users/otp copy.ejs
+++ b/views/users/otp copy.ejs
@@ -225,27 +225,28 @@
             </nav><!-- End .breadcrumb-nav -->
 
             <div class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17" style="background-image: url('assets/images/backgrounds/login-bg.jpg')">
-            	<div class="container">
-            		<div class="form-box">
-            			<div class="form-tab">
-	            			<h1>Verify</h1>
-							<form action="/verifyingOtp" method="post">
+                <div class="container">
+                    <div class="form-box">
+                        <div class="form-tab">
+                            <h1>Verify</h1>
+                            <form action="/verifyingForgotOtp" method="post">
                                 <% if(typeof message !== 'undefined' ){ %>
                                     <h4> <%=message%></h4>
-                                  <%}%>
+                                <%}%>
                                 <label for="">Enter the OTP sent to your email address</label>
                                 <input type="hidden" name="userId" value="<%= userId  %>">
                                 <!-- <input type="hidden" name="userId" value="<%= userId  %>"> -->
-                              
                                 <input type="number" class="form-control" placeholder="" name="otp" required>
                                 <button type="submit" class="btn btn-outline-primary-2">Verify</button>
-                                <!-- <a onclick="" class="text-danger font-weight-normal "  style=" margin-left: 20px; " href="resendotp">Resend OTP </a> -->
                             </form>
-                            
-							
-						</div><!-- End .form-tab -->
-            		</div><!-- End .form-box -->
-            	</div><!-- End .container -->
+                            <!-- Retry button and timer container -->
+                            <div id="retry-container" style="display: none;">
+                                <p>Retry in <span id="timer-countdown"></span></p>
+                                <button type="button" id="retry-button" class="btn btn-outline-primary-2" disabled>Retry</button>
+                            </div> <h5>retrey</h5>
+                        </div><!-- End .form-tab -->
+                    </div><!-- End .form-box -->
+                </div><!-- End .container -->
             </div><!-- End .login-page section-bg -->
         </main><!-- End .main -->
 
@@ -410,9 +411,6 @@
         });
     </script>
     
-
-
-
 </body>
 
 
