--- a/views/admin/edit-coupon.ejs
+++ b/views/admin/edit-coupon.ejs
@@ -14,6 +14,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="assets admin/imgs/theme/favicon.svg" />
         <!-- Template CSS -->
         <link href="/assets admin/css/main.css?v=1.1" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     </head>
 
     <body>
@@ -49,30 +50,11 @@
                             <span class="text" >Categories</span>
                         </a>
                     </li>
-
-                    <li class="menu-item">
-                        <a class="menu-link" href="orders">
-                            <i class="icon material-icons md-comment"></i>
-                            <span class="text" >Orders</span>
-                        </a>
-                    </li>
                    
                     <li class="menu-item">
                         <a class="menu-link" href="products">
                             <i class="icon material-icons md-comment"></i>
                             <span class="text" >Products</span>
-                        </a>
-                    </li>
-                    <li class="menu-item">
-                        <a class="menu-link" href="coupons">
-                            <i class="icon material-icons md-comment"></i>
-                            <span class="text" >Coupons</span>
-                        </a>
-                    </li>
-                    <li class="menu-item">
-                        <a class="menu-link" href="offer">
-                            <i class="icon material-icons md-comment"></i>
-                            <span class="text" >Offer</span>
                         </a>
                     </li>
                     <li class="menu-item">
@@ -144,72 +126,70 @@
             </header>
             <section class="content-main">
                 <div class="content-header">
-                    <h2 class="content-title">Coupon list</h2>
-                    <div>
-                        <a href="/admin/loadAddCoupon" class="btn btn-primary"><i class="material-icons md-plus"></i> Create Coupon</a>
-                    </div>
+                    <h2 class="content-title">Edit Coupon </h2>
+                   
                 </div>
+                <% if(typeof message !== 'undefined'){%>
+                   
+                    <h4 class="text-danger"><%= message%></h4>
+                     <%}%>
                 <div class="card mb-4">
-                    
-                    <!-- card-header end// -->
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table table-hover">
-                                <% if(coupon &&coupon.length>0){%>
-                                <thead>
-                                    <tr>
-                                        <th>No.</th>
-                                        <th>Name</th>
-                                       <th>Code</th>
-                                       <th>Discount</th>
-                                        
-                                        <th>StartDate</th>
-                                        <th>ExpiryDate</th>
-                                        <th>Action</th>
-                                        <th class="">Remove</th>
-                                    </tr>
-                                </thead>
-                                    <tbody>
-                                       
-                                                <tr>
-                                                  
-                                                        <% coupon.forEach((val,index)=>{ %>
-                                                    <td style="font-weight: bold;"><%= index+1 %></td>
-                                                    <td style="font-weight: bold;"><%= val.name%></td>
-                                                    <td><%=val.couponCode%></td>
-                                                        <td style="font-weight: bold;">
-                                                               <%=val.discountAmount %>%
-                                                        </td>
-                                                        <td style="font-weight: bold;"><%= val.activationDate.toLocaleDateString('en-US', {
-                                                            weekday: 'short', year: 'numeric', month: 'short',
-                                                            day: 'numeric'
-                                                        })  %></td>
-                                                        <td><%= val.expiryDate.toLocaleDateString('en-US', {
-                                                            weekday: 'short', year: 'numeric', month: 'short',
-                                                            day: 'numeric'
-                                                        }) %></td>
-                                                        <td><a href="/admin/editCoupon/<%=val._id%>">Edit</a></td>
-                                                        <td><a href="/admin/removeCoupon/<%= val._id%>">Remove</a></td>
-                                                    </tr>
-                                                    <%})%>
-                                                    <%}else{%>
-                                                        <h4>No Coupon Found</h4>
-                                                    <%}%>
-                                               
-                            
-                                <tbody>
-                                       
-                   </tbody>
-                            </table>
-                            <!-- table-responsive.// -->
+                    <header class="card-header">
+                        <div class="row gx-3">
+                            <form action="/admin/submitCoupon" method="post" id="couponForm">
+                                <!-- Coupon Name Field -->
+                                <div class="row">
+                                    <div class="col">
+                                        <label for="couponName" class="text">Coupon Name</label>
+                                        <input class="form-control" type="text" value="<%=coupon.name%>" name="name" id="coupName" placeholder="Enter the Coupon Name" required>
+                                        <div id="nameError" class="text-danger"></div> <!-- Error Message -->
+                                    </div>
+                                    <div class="col">
+                                        <label for="couponCode" class="text">Coupon Code</label>
+                                        <input class="form-control" type="text" value="<%=coupon.couponCode%>" name="code" id="coupCode" placeholder="Enter the Coupon Code" required>
+                                        <div id="codeError" class="text-danger"></div> <!-- Error Message -->
+                                    </div>
+                                </div>
+                                <br>
+                                <!-- Discount and Criteria Fields -->
+                                <div class="row">
+                                    <div class="col">
+                                        <label for="discountAmount" class="text">Discount Percentage</label>
+                                        <input class="form-control" type="number" value="<%=coupon.discountAmount%>" name="discount" id="discAmount" placeholder="Enter the Discount Amount" required>
+                                        <div id="discountError" class="text-danger"></div> <!-- Error Message -->
+                                    </div>
+                                    <div class="col">
+                                        <label for="criteriaAmount" class="text">Criteria Amount</label>
+                                        <input class="form-control" type="number" value="<%=coupon.criteriaAmount%>" name="criteria" id="criteria" placeholder="Enter the Criteria Amount" required>
+                                        <div id="criteriaError" class="text-danger"></div> <!-- Error Message -->
+                                    </div>
+                                </div>
+                                <br>
+                                <!-- Starting and Expiry Date Fields -->
+                                <div class="row">
+                                    <div class="col">
+                                        <label for="startingDate" class="text">Starting Date</label>
+                                        <input class="form-control" type="date" value="<%= coupon.activationDate ? new Date(coupon.activationDate).toISOString().split('T')[0] : '' %>" name="start" id="startDate" required>
+                                        <div id="startDateError" class="text-danger"></div> <!-- Error Message -->
+                                    </div>
+                                    <div class="col">
+                                        <label for="expiryDate" class="text">Expiry Date</label>
+                                        <input class="form-control" type="date" value="<%= coupon.expiryDate ? new Date(coupon.expiryDate).toISOString().split('T')[0] : '' %>" name="expiry" id="expiryDate" required>
+                                        <div id="expiryDateError" class="text-danger"></div> <!-- Error Message -->
+                                        <input type="hidden" name="id" value="<%=coupon._id%>" id="couponId">
+                                    </div>
+                                </div>
+                                
+                                <br>
+                                <button type="button" onclick="validateForm()" class="border-1" style="background-color: rgb(134, 134, 234); color: white;">Submit</button>
+                            </form>
                         </div>
-                    </div>
+                        
                     <!-- card-body end// -->
                 </div>
                 <!-- card end// -->
-              
+               
             </section>
-   
             <!-- content-main end// -->
             <footer class="main-footer font-xs">
                 <div class="row pb-30 pt-15">
@@ -232,9 +212,116 @@
         <script src="assets admin/js/vendors/jquery.fullscreen.min.js"></script>
         <!-- Main Script -->
         <script src="assets admin/js/main.js?v=1.1" type="text/javascript"></script>
-        
-        <!-- <script>
-    
+        <script>
+            const today = new Date();
+            
+            const adjustedDate = new Date(today);
+            adjustedDate.setDate(today.getDate() + 1);
+            
+            const formattedAdjustedDate = adjustedDate.toISOString().split('T')[0];
+            
+            document.getElementById('startDate').setAttribute('min', formattedAdjustedDate);
+        </script>
+
+
+
+<script>
+    function validateForm() {
+        const nameInput = document.getElementById('coupName');
+        const codeInput = document.getElementById('coupCode');
+        const discountInput = document.getElementById('discAmount');
+        const criteriaInput = document.getElementById('criteria');
+        const startDateInput = document.getElementById('startDate');
+        const expiryDateInput = document.getElementById('expiryDate');
+        const couponId = document.getElementById('couponId').value;
+
+
+        // Reset previous error messages
+        document.getElementById('nameError').textContent = '';
+        document.getElementById('codeError').textContent = '';
+        document.getElementById('discountError').textContent = '';
+        document.getElementById('criteriaError').textContent = '';
+        document.getElementById('startDateError').textContent = '';
+        document.getElementById('expiryDateError').textContent = '';
+
+        let isValid = true;
+
+        if (!nameInput.value ||(nameInput.value).trim() ==="" ) {
+            document.getElementById('nameError').textContent = 'Coupon Name is required';
+            isValid = false;
+        }
+
+        if (!codeInput.value  || (codeInput.value).trim() ==="") {
+            document.getElementById('codeError').textContent = 'Coupon Code is required';
+            isValid = false;
+        }
+
+        if (!discountInput.value) {
+            document.getElementById('discountError').textContent = 'Discount Percentage is required';
+            isValid = false;
+        }
+
+        if (!criteriaInput.value) {
+            document.getElementById('criteriaError').textContent = 'Criteria Amount is required';
+            isValid = false;
+        }
+
+        if (!startDateInput.value) {
+            document.getElementById('startDateError').textContent = 'Starting Date is required';
+            isValid = false;
+        }
+
+        if (!expiryDateInput.value) {
+            document.getElementById('expiryDateError').textContent = 'Expiry Date is required';
+            isValid = false;
+        }
+        if (discountInput.value <= 0 ||discountInput.value >99) {
+            document.getElementById('discountError').textContent = 'Give Discount amount between 1 to 99';
+            isValid = false;
+        }
+        if (criteriaInput.value < 1000) {
+            document.getElementById('criteriaError').textContent = 'Criteria Amount must be above 1000';
+            isValid = false;
+        }
+        if (expiryDateInput.value <= startDateInput.value ) {
+            document.getElementById('expiryDateError').textContent = 'Expiry Date must be above start Date';
+            isValid = false;
+        }
+
+        if (!isValid) {
+            return; // Exit function if validation fails
+        }
+       const name=nameInput.value
+       const code=codeInput.value
+       const discount =discountInput.value
+       const criteria=criteriaInput.value
+       const start =startDateInput.value
+       const expiry=expiryDateInput.value
+
+        console.log("kkkkoi",nameInput)
+        fetch('/admin/submitCouponEdit',{
+            method:'POST',
+            headers:{
+                'Content-Type':'application/json'
+            },
+            body:JSON.stringify({couponId,name,code,discount,criteria,start,expiry})
+        }).then(response=>response.json())
+        .then(data=>{
+            if(data.success ==true){
+                window.location.href='/admin/coupons'
+            }else if(data.success === false){
+                console.log("kjfhakv")
+                document.getElementById('codeError').textContent = 'Coupon Code already Exist   ';
+            }
+        })
+
+        // Your existing validation and form submission logic here
+    }
+</script>
+
+
+
+       
     </body>
 </html>
        
