--- a/views/admin/orderPage.ejs
+++ b/views/admin/orderPage.ejs
@@ -199,7 +199,7 @@
                                                                             }) %>
                                                                         </td>
                                                                         <td style=" padding-left: 5%">
-                                                                            ₹  <%= order.subtotal %>
+                                                                            ₹  <%= order.subtotal.toFixed(0) %>
                                                                         </td>
                                                                         <td style=" padding-left: 5%">
                                                                             <%= order.payment %>
